fixed the alignment

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,6 +1,6 @@
 @media (max-width:1399.98px) {
   .common-button-groups .btn {
-    padding: 16px 13px;
+    padding: 16px 16px;
     font-size: 15px;
   }
 
